--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <title>Lezione 15 project</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./style.css">
 
 
   </head>
   <body class="bg-primary">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg border-bottom bg-body-tertiary p-0">
+    <nav class="navbar navbar-expand-lg border-bottom bg-body-tertiary p-0 fixed-top" id="mainNav">
         <div class="container-fluid ">
-          <a class="navbar-brand" href="#"><i class="fa-solid fa-car-side me-2"></i>Cratia</a>
+          <a class="navbar-brand fs-3 fw-bold" href="#"><i class="fa-solid fa-car-side me-2"></i>Cratia</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -34,18 +34,15 @@
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Auto
                 </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                <ul class="dropdown-menu rounded-0 m-0">
+                  <li><a class="dropdown-item" href="#">Nada</a></li>
                 </ul>
               </li>
               <li class="nav-item">
                   <a class="nav-link" href="#">Contatti</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+                <a class="nav-link nav-link-icon-presto" href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
               </li>
             </ul>
             <button class="btn btn-presto ms-2">Auto Nuove</button>
