--- a/index.html
+++ b/index.html
@@ -101,6 +101,39 @@
 </section>
 
 
+<!-- Tre div -->
+  <div class="container" id="trepal">
+    <div class="row pos-info py-lg-0 py-5 z-2">
+      <div class="col-lg-4 col-12 px-5 py-3 bg-presto d-flex justify-content-center align-items-center">
+        <div class="p-4 bg-white text-presto me-3">
+          <i class="fa-solid fa-bullhorn"></i>
+        </div>
+        <div class="d-flex flex-column text-white">
+          <span class="h6">annunci inseriti</span>
+          <span class="display-5">12345</span>
+        </div>
+      </div>
+      <div class="col-lg-4 col-12 px-5 py-3 bg-white d-flex justify-content-center align-items-center">
+        <div class="p-4 bg-presto me-3">
+          <i class="fa-solid fa-check"></i>
+        </div>
+        <div class="d-flex flex-column text-presto">
+          <span class="h6">blues</span>
+          <span class="display-5 text-black">12345</span>
+        </div>
+      </div>
+      <div class="col-lg-4 col-12 px-5 py-3 bg-presto d-flex justify-content-center align-items-center">
+        <div class="p-4 bg-white bg-white text-presto me-3">
+          <i class="fa-solid fa-bullhorn"></i>
+        </div>
+        <div class="d-flex flex-column text-white">
+          <span class="h6">annunci inseriti</span>
+          <span class="display-5">12345</span>
+        </div>
+      </div>
+    </div>
+  </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script src="./script.js"></script>
 </body>
